# bd_shacketons

./: .pdm-python  .~lock.ejemplo_carga_masiva.xlsx#  README.md  asistencia_SCL.xlsx  ejemplo_carga_masiva.xlsx  main.py  proveedores.xlsx  pyproject.toml  pyvenv.cfg  requerimiento_transportes_PUQ.xlsx  room_list.xlsx  room_list_CABO DE HORNOS.xlsx  room_list_CABO DE HORNOS_Silver Endeavour.xlsx  room_list_CABO DE HORNOS_Silver endeavour.xlsx  room_list_SIN HOTEL.xlsx  room_list_SIN HOTEL_Silver Cloud.xlsx  room_list_TBC_Silver Endeavour.xlsx  shacketons_db.sqlite3
app/: Informe crew aplicacion.xlsx  Plantilla.xlsx  Plantilla_Pasajeros_Vuelos.xlsx  __init__.py  carga_datos.py  controllers.py  database.py  dtos.py  ejemplo_carga_masiva.xlsx  gui.py  models.py  prueba_carga.xlsx  prueba_carga_masiva.xlsx  repositories.py  test.py  ui copy.py  ui.py
app/interfaz/: carga_masiva.py  generacion_reportes.py  gui.py  pandas_model.py  visualizacion_datos.py
